--- a/windows.html
+++ b/windows.html
@@ -21,11 +21,12 @@
     left: 0;
     width: 100%;
     height: 100%;
+    transition: opacity .5s;
   }
 
   #screen > .window div {
     position: absolute;
-    transition: top .5s, left .5s;
+    transition: all .5s;
   }
 
   #screen > .window > div:first-child {
