--- a/wi_demo_visualizer.html
+++ b/wi_demo_visualizer.html
@@ -81,8 +81,8 @@
     border-bottom-right-radius: .25em;
   }
 </style>
-  <script src="../subetha/subetha.min.js"></script>
-  <script src="src/subetha-client-wi.js"></script>
+  <script src="http://rawgit.com/bemson/subetha/master/subetha.min.js"></script>
+  <script src="http://rawgit.com/bemson/subetha-client-wi/master/subetha-client-wi.min.js"></script>
   <script>
 var
   availTop = screen.availTop || 0,
